--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-papaparse": "^3.3.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-table": "^7.2.1"
   },
